tests222/tests2/test358.out
lli: <stdin>:1:1: error: expected top-level entity
line 14: variable z is not defined
^
